<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_home_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_page_bg" >

    <RelativeLayout
        android:id="@+id/layout_home_page_navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/home_page_navigation_bar_bg"
        android:paddingLeft="29dp"
        android:paddingRight="29dp" >

        <ImageView
            android:id="@+id/imageView_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/logo_image_description"
            android:src="@drawable/logo_567go" />

        <TextView
            android:id="@+id/textView_navigation_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_home_page_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView_course"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bottom_bar_btn_bg_selector"
            android:contentDescription="@string/logo_image_description"
            android:scaleType="center"
            android:src="@drawable/bottom_bar_course" />

        <ImageView
            android:id="@+id/imageView_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bottom_bar_btn_bg_selector"
            android:contentDescription="@string/login_description"
            android:scaleType="center"
            android:src="@drawable/bottom_bar_home" />

        <ImageView
            android:id="@+id/imageView_share"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bottom_bar_btn_bg_selector"
            android:contentDescription="@string/login_image_description"
            android:scaleType="center"
            android:src="@drawable/bottom_bar_share" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_content_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout_home_page_bottom_bar"
        android:layout_below="@id/layout_home_page_navigation_bar" >
    </RelativeLayout>

</RelativeLayout>